Fixed z-index of <HeatMap/> component

--- a/heat-map-app/src/App.css
+++ b/heat-map-app/src/App.css
@@ -28,6 +28,7 @@ p {
 .heatmap {
   height: 500px;
   margin-top: 20px;
+  z-index: 0;
 }
 
 .loading-text {
